# genai

./: .gitignore  ID_bsite.py  README.md  cluster_snapshots.py  contact_surface.py  environment.yml  pyproject.toml  smiles_to_sdf.py  vina_VS.sh
.old_scripts/: contact_surface.py  smiles_to_sdf.py
.old_scripts/docking/: docking.py
.old_scripts/plots/: contact_surface.py  renumber_split.py
cli/: run_docking.py
dockflow/analyze/: contact.py  plots copy.py  plots.py  plots_copy.py  rmsd.py  similarity.py  vina_scores.py
dockflow/cli/: parallel_docking.py  run_docking.py  run_vinaGPU.py
dockflow/dock/: vina.py
dockflow/dock/prepare/: ligands.py  receptors.py
dockflow/utils/: fileio.py
paper/: ClarkNicolas2026AdaptiveDesign.tex  acs-latex-template.tex  rcs-template.tex  references_mendeley.bib
paper/SI/: SI.tex
paper/SI/REINVENT4_INPUTS/: rl_novina.toml  tl.toml
paper/SI/reinvent_molecules/: round_1.csv  round_2.csv
paper/paper_files/: abstract.tex  authors.tex  main.tex
plots/: contact_surface.py  rmsf.py
scripts/: get_overlapping_distributions.py  run_docking.sh
tests/: test_prepare.py
